08/02/22-EEP Poco avance en los htmls

--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -10,27 +10,27 @@
     <div style="margin: 10px">
         <h3 style="text-align: center">Alumnos</h3>
         <div>
-            <button><a style="text-decoration: none; color: black" href="/addalumnos">Add Alumnos</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listalumnos">Update Alumnos</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listalumnos">Delete Alumnos</a></button>
+            <button><a style="text-decoration: none; color: black" href="/addalumnosget">Add Alumnos</a></button>
+            <button><a style="text-decoration: none; color: black" href="/listalumnosget">Update Alumnos</a></button>
+            <button><a style="text-decoration: none; color: black" href="/listalumnosget">Delete Alumnos</a></button>
         </div>
     </div>
     <div style="margin: 10px">
         <h3 style="text-align: center">Asignaturas</h3>
         <div>
-            <button><a style="text-decoration: none; color: black" href="/addasignaturas">Add Asignaturas</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listasignaturas">Update Asignaturas</a>
+            <button><a style="text-decoration: none; color: black" href="/addasignaturasget">Add Asignaturas</a></button>
+            <button><a style="text-decoration: none; color: black" href="/listasignaturasget">Update Asignaturas</a>
             </button>
-            <button><a style="text-decoration: none; color: black" href="/listasignaturas">Delete Asignaturas</a>
+            <button><a style="text-decoration: none; color: black" href="/listasignaturasget">Delete Asignaturas</a>
             </button>
         </div>
     </div>
     <div style="margin: 10px">
         <h3 style="text-align: center">Usuarios</h3>
         <div>
-            <button><a style="text-decoration: none; color: black" href="/addusuarios">Add Usuarios</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listusuarios">Update Usuarios</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listusuarios">Delete Usuarios</a></button>
+            <button><a style="text-decoration: none; color: black" href="/addusuariosget">Add Usuarios</a></button>
+            <button><a style="text-decoration: none; color: black" href="/listusuariosget">Update Usuarios</a></button>
+            <button><a style="text-decoration: none; color: black" href="/listusuariosget">Delete Usuarios</a></button>
         </div>
     </div>
 </div>
