--- a/src/main/resources/templates/Alumnos/addalumno.html
+++ b/src/main/resources/templates/Alumnos/addalumno.html
@@ -5,6 +5,47 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Agregacion de nuevos Alumnos</h1>
+    <form action="#" th:action="@{/addalumnospost}" th:object="${alumno}" method="post">
+        <div style="display: flex; flex-direction: column">
+            <div>
+                <label>Nombre</label>
+                <input type="text" th:field="${alumno.nombre}">
+            </div>
+            <div>
+                <label>apellidos</label>
+                <input type="text" th:field="${alumno.apellidos}">
+            </div>
+            <div>
+                <label>direccion</label>
+                <input type="text" th:field="${alumno.direccion}">
+            </div>
+            <div>
+                <label>localidad</label>
+                <input type="text" th:field="${alumno.localidad}">
+            </div>
+            <div>
+                <label>provincia</label>
+                <input type="text" th:field="${alumno.provincia}">
+            </div>
+            <div>
+                <label>pais</label>
+                <input type="text" th:field="${alumno.pais}">
+            </div>
+            <div>
+                <label>telefono</label>
+                <select>
+                    <option></option>
+                </select>
+                <input type="text" th:field="${alumno.telefono}">
+            </div>
+        </div>
+        <div>
+            <div>
+                <label>Asignaturas</label>
+            </div>
+        </div>
+        <input type="submit" value="submit">
+    </form>
 </body>
 </html>
