--- a/src/main/resources/templates/Users/adduser.html
+++ b/src/main/resources/templates/Users/adduser.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Agregacion de nuevos Alumnos</h1>
+<form action="#" th:action="@{/addusuariospost}" th:object="${usuario}" method="post">
+    <div style="display: flex; flex-direction: column">
+        <div>
+            <label>Nombre</label>
+            <input type="text" th:field="${usuario.nombre}">
+        </div>
+        <div>
+            <label>Password</label>
+            <input type="password" th:field="${usuario.password}">
+        </div>
+        <div>
+            <label>Permisos</label>
+            <input type="number" th:field="${usuario.permisos}">
+        </div>
+    </div>
+    <input type="submit" value="submit">
+</form>
 </body>
 </html>
