--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -6,33 +6,94 @@
 </head>
 <body>
 <h1 style="text-align: center"><span> Usted se ha loggeado como "ad o user"</span></h1>
-<div style="display: flex; flex-wrap: wrap; flex-direction: row; align-content: space-between; justify-content: center">
-    <div style="margin: 10px">
-        <h3 style="text-align: center">Alumnos</h3>
-        <div>
-            <button><a style="text-decoration: none; color: black" href="/addalumnosget">Add Alumnos</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listalumnosget">Update Alumnos</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listalumnosget">Delete Alumnos</a></button>
+<form name="formulario" id="botones" action="#" method="get">
+    <div style="display: flex; flex-wrap: wrap; flex-direction: row; align-content: space-between; justify-content: center">
+        <div style="margin: 10px">
+            <h3 style="text-align: center">Alumnos</h3>
+            <input type="submit" class="button" id="AlumnoAdd" th:name="url" value="Añadir alumno"
+                   onclick="addalumnos()">
+            <input type="submit" class="button" id="AlumnoUpdate" th:name="url" value="Actualizar Alumno"
+                   onclick="updatealumnos()">
+            <input type="submit" class="button" id="AlumnoDelete" th:name="url" value="Borrar Alumno"
+                   onclick="delalumnos()">
+        </div>
+        <div style="margin: 10px">
+            <h3 style="text-align: center">Asignaturas</h3>
+            <input type="submit" class="button" id="AsignaturaAdd" th:name="url" value="Añadir Asignatura"
+                   onclick="addasignaturas()">
+            <input type="submit" class="button" id="AsignaturaUpdate" th:name="url" value="Actualizar Asignatura"
+                   onclick="updateasignaturas()">
+            <input type="submit" class="button" id="AsignaturaDelete" th:name="url" value="Borrar Asignatura"
+                   onclick="delasignaturas()">
+        </div>
+        <div style="margin: 10px">
+            <h3 style="text-align: center">Usuarios</h3>
+            <input type="submit" class="button" id="UsuariosAdd" th:name="url" value="Añadir Usuarios"
+                   onclick="addusers()">
+            <input type="submit" class="button" id="UsuariosUpdate" th:name="url" value="Actualizar Usuarios"
+                   onclick="updateusers()">
+            <input type="submit" class="button" id="UsuariosDelete" th:name="url" value="Borrar Usuarios"
+                   onclick="delusers()">
         </div>
     </div>
-    <div style="margin: 10px">
-        <h3 style="text-align: center">Asignaturas</h3>
-        <div>
-            <button><a style="text-decoration: none; color: black" href="/addasignaturasget">Add Asignaturas</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listasignaturasget">Update Asignaturas</a>
-            </button>
-            <button><a style="text-decoration: none; color: black" href="/listasignaturasget">Delete Asignaturas</a>
-            </button>
-        </div>
-    </div>
-    <div style="margin: 10px">
-        <h3 style="text-align: center">Usuarios</h3>
-        <div>
-            <button><a style="text-decoration: none; color: black" href="/addusuariosget">Add Usuarios</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listusuariosget">Update Usuarios</a></button>
-            <button><a style="text-decoration: none; color: black" href="/listusuariosget">Delete Usuarios</a></button>
-        </div>
-    </div>
-</div>
+</form>
 </body>
+<script th:inline="javascript">
+    const form = document.getElementById('botones');
+    let submit = ''
+
+    function addalumnos() {
+        form.setAttribute('action', '/addalumnosget');
+        submit = 'AlumnoAdd';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function updatealumnos() {
+        form.setAttribute('action', '/listalumnosget');
+        submit = 'AlumnoUpdate';
+        document.getElementById(submit).setAttribute('value', 'updatealumnosget')
+    }
+
+    function delalumnos() {
+        form.setAttribute('action', '/listalumnosget');
+        submit = 'AlumnoDelete';
+        document.getElementById(submit).setAttribute('value', 'deletealumnosget')
+    }
+
+    function addasignaturas() {
+        form.setAttribute('action', 'addasignaturasget');
+        submit = 'AsignaturaAdd';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function updateasignaturas() {
+        form.setAttribute('action', 'listasignaturasget');
+        submit = 'AsignaturaUpdate';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function delasignaturas() {
+        form.setAttribute('action', 'listasignaturasget');
+        submit = 'AsignaturaDelete';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function addusers() {
+        form.setAttribute('action', 'addusuariosget');
+        submit = 'UsuariosAdd';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function updateusers() {
+        form.setAttribute('action', 'listusuariosget');
+        submit = 'UsuariosUpdate';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+
+    function delusers() {
+        form.setAttribute('action', 'listusuariosget');
+        submit = 'UsuariosDelete';
+        document.getElementById(submit).setAttribute('value', 'a')
+    }
+</script>
 </html>
