10/02/22-Casa Add alumnos asignaturas

--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -56,7 +56,7 @@
     function delalumnos() {
         form.setAttribute('action', '/listalumnosget');
         submit = 'AlumnoDelete';
-        document.getElementById(submit).setAttribute('value', 'deletealumnosget')
+        document.getElementById(submit).setAttribute('value', 'delalumnospost')
     }
 
     function addasignaturas() {
