--- a/src/main/resources/templates/Alumnos/addalumno.html
+++ b/src/main/resources/templates/Alumnos/addalumno.html
@@ -66,11 +66,18 @@
                 <label>Asignaturas</label>
                 <table>
                     <thead>
-                        <th></th>
+                        <th>Nombre</th>
+                        <th>Curso</th>
+                        <th>Horas</th>
+                        <th>Cuatrimestre</th>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th><span></span></th>
+                        <tr th:each="i : ${asignaturas}">
+                            <th><span th:text="${i.nombre}"></span></th>
+                            <th><span th:text="${i.curso}"></span></th>
+                            <th><span th:text="${i.horas}"></span></th>
+                            <th><span th:text="${i.cuatrimestre}"></span></th>
+                            <th><input type="checkbox" th:value="${i.id}" th:field="${alumno.id_asignatura}"></th>
                         </tr>
                     </tbody>
                 </table>
