--- a/src/main/resources/templates/Users/updateuser.html
+++ b/src/main/resources/templates/Users/updateuser.html
@@ -13,6 +13,9 @@
             <input type="text" th:field="${usuario.nombre}">
         </div>
         <div>
+            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+        </div>
+        <div>
             <label>Password</label>
             <input type="password" th:field="${usuario.password}">
         </div>
