--- a/src/main/resources/templates/loggin.html
+++ b/src/main/resources/templates/loggin.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 <form action="#" th:action="@{/logged}" th:object="${user}" method="post">
-    <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+    <div>
+        <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+    </div>
     <input type="text" th:field="${user.nombre}">
-    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+    <div>
+        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+    </div>
     <input type="password" th:field="${user.password}">
     <input type="submit" value="submit">
 </form>
