--- a/src/main/resources/templates/Asignaturas/addasignatura.html
+++ b/src/main/resources/templates/Asignaturas/addasignatura.html
@@ -6,35 +6,35 @@
 </head>
 <body>
 <h1>Agregacion de nuevos Alumnos</h1>
-<form action="#" th:action="@{/addasignaturaspost}" th:object="${asignatura}" method="post">
+<form action="#" th:action="@{/addasignaturaspost}" method="post">
     <div style="display: flex; flex-direction: column">
         <div>
             <label>Nombre</label>
             <input type="text" th:field="${asignatura.nombre}">
         </div>
         <div>
-            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('asignatura.nombre')}" th:errors="*{asignatura.nombre}" style="color: red"></span>
         </div>
         <div>
             <label>Curso</label>
             <input type="number" th:field="${asignatura.curso}">
         </div>
         <div>
-            <span th:if="${#fields.hasErrors('curso')}" th:errors="*{curso}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('asignatura.curso')}" th:errors="*{asignatura.curso}" style="color: red"></span>
         </div>
         <div>
             <label>Horas</label>
             <input type="number" th:field="${asignatura.horas}">
         </div>
         <div>
-            <span th:if="${#fields.hasErrors('horas')}" th:errors="*{horas}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('asignatura.horas')}" th:errors="*{asignatura.horas}" style="color: red"></span>
         </div>
         <div>
             <label>Cuatrimestre</label>
             <input type="number" th:field="${asignatura.cuatrimestre}">
         </div>
         <div>
-            <span th:if="${#fields.hasErrors('cuatrimestre')}" th:errors="*{cuatrimestre}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('asignatura.cuatrimestre')}" th:errors="*{asignatura.cuatrimestre}" style="color: red"></span>
         </div>
     </div>
     <input type="submit" value="submit">
