--- a/src/main/resources/templates/Users/adduser.html
+++ b/src/main/resources/templates/Users/adduser.html
@@ -9,14 +9,14 @@
 <form action="#" th:action="@{/addusuariospost}" method="post">
     <div style="display: flex; flex-direction: column">
         <div>
-            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('usuario.nombre')}" th:errors="*{usuario.nombre}" style="color: red"></span>
         </div>
         <div>
             <label>Nombre</label>
             <input type="text" th:field="${usuario.nombre}">
         </div>
         <div>
-            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+            <span th:if="${#fields.hasErrors('usuario.password')}" th:errors="*{usuario.password}" style="color: red"></span>
         </div>
         <div>
             <label>Password</label>
