--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="@{css_permisos}" th:href="${css_permisos}" rel="stylesheet">
+    <link th:href="${css_permisos}" rel="stylesheet">
+    <script type="text/javascript" src="../static/js/crudjs.js"></script>
 </head>
 <body>
 <h1 style="text-align: center"><span> Usted se ha loggeado como "ad o user"</span></h1>
@@ -39,32 +40,4 @@
     </div>
 </form>
 </body>
-<script th:inline="javascript">
-    const form = document.getElementById('botones');
-
-    function addalumnos() {
-        form.setAttribute('action', '/addalumnosget');
-    }
-
-    function listalumnos() {
-        form.setAttribute('action', '/listalumnosget');
-    }
-
-    function addasignaturas() {
-        form.setAttribute('action', 'addasignaturasget');
-    }
-
-    function listasignaturas() {
-        form.setAttribute('action', 'listasignaturasget');
-    }
-
-    function addusers() {
-        form.setAttribute('action', 'addusuariosget');
-    }
-
-    function listusers() {
-        form.setAttribute('action', 'listusuariosget');
-    }
-
-</script>
 </html>
