--- a/src/main/resources/templates/loggin.html
+++ b/src/main/resources/templates/loggin.html
@@ -5,16 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-<form action="#" th:action="@{/logged}" th:object="${user}" method="post">
-    <div>
-        <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
-    </div>
-    <input type="text" th:field="${user.nombre}">
-    <div>
-        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
-    </div>
-    <input type="password" th:field="${user.password}">
-    <input type="submit" value="submit">
-</form>
+<header></header>
+<main>
+    <form action="#" th:action="@{/logged}" th:object="${user}" method="post">
+        <div>
+            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+        </div>
+        <input type="text" th:field="${user.nombre}">
+        <div>
+            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+        </div>
+        <input type="password" th:field="${user.password}">
+        <input type="submit" value="submit">
+    </form>
+</main>
+<footer></footer>
 </body>
 </html>
