--- a/src/main/resources/templates/loggin.html
+++ b/src/main/resources/templates/loggin.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="../static/comun.css" rel="stylesheet">
+    <link href="../static/loggin.css" rel="stylesheet">
 </head>
 <body>
-<header></header>
-<main>
+<header>
+    <h1>Bienvenido a Colegio Universitario Internacional BITCOIN</h1>
+</header>
+<main style="display: flex; margin: auto auto">
     <form action="#" th:action="@{/logged}" th:object="${user}" method="post">
         <div>
-            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+            <div>
+                <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
+            </div>
+            <input type="text" th:field="${user.nombre}">
         </div>
-        <input type="text" th:field="${user.nombre}">
         <div>
-            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+            <div>
+                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+            </div>
+            <input type="password" th:field="${user.password}">
         </div>
-        <input type="password" th:field="${user.password}">
-        <input type="submit" value="submit">
+        <div>
+            <input type="submit" value="submit">
+        </div>
     </form>
 </main>
 <footer></footer>
