--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -33,9 +33,9 @@
         </div>
     </div>
     <div class="user">
-        <input type="submit" class="button" th:name="url" value="Listar alumnos"
+        <input type="submit" class="button" id="ListAlumnosu" th:name="url" value="Listar alumnos"
                onclick="listalumnos()">
-        <input type="submit" class="button" th:name="url" value="Listar Asignatura"
+        <input type="submit" class="button" id="ListAsignaturasu" th:name="url" value="Listar Asignatura"
                onclick="listasignaturas()">
     </div>
 </form>
