--- a/src/main/resources/templates/loggin.html
+++ b/src/main/resources/templates/loggin.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../static/comun.css" rel="stylesheet">
-    <link href="../static/loggin.css" rel="stylesheet">
+    <!--    <link href="../static/css/comun.css" rel="stylesheet">-->
+    <link href="../static/css/loggin.css" rel="stylesheet">
 </head>
 <body>
 <header>
-    <h1>Bienvenido a Colegio Universitario Internacional BITCOIN</h1>
+    <h1>Colegio Universitario Internacional BITCOIN</h1>
 </header>
-<main style="display: flex; margin: auto auto">
+<main>
     <form action="#" th:action="@{/logged}" th:object="${user}" method="post">
+        <label>BIENVENIDO</label>
         <div>
-            <div>
-                <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
-            </div>
-            <input type="text" th:field="${user.nombre}">
+            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" style="color: red"></span>
         </div>
         <div>
-            <div>
-                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
-            </div>
-            <input type="password" th:field="${user.password}">
+            <input type="text" th:field="${user.nombre}" placeholder="Nombre de Usuario">
         </div>
         <div>
-            <input type="submit" value="submit">
+            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red"></span>
+        </div>
+        <div>
+            <input type="password" th:field="${user.password}" placeholder="Contraseña">
+        </div>
+        <div>
+            <input class="btn" type="submit" value="submit">
         </div>
     </form>
 </main>
